--- a/WebScraping/Get_Data_Bundesliga_22_23.ipynb
+++ b/WebScraping/Get_Data_Bundesliga_22_23.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,576 +373,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "117,55\n",
-      "117,16\n",
-      "116,41\n",
-      "114,55\n",
-      "114,05\n",
-      "113,89\n",
-      "113,20\n",
-      "112,81\n",
-      "112,05\n",
-      "111,88\n",
-      "111,88\n",
-      "111,73\n",
-      "110,86\n",
-      "110,21\n",
-      "108,64\n",
-      "108,36\n",
-      "107,75\n",
-      "104,96\n",
-      "118,13\n",
-      "117,77\n",
-      "116,56\n",
-      "115,92\n",
-      "115,68\n",
-      "115,41\n",
-      "114,82\n",
-      "114,01\n",
-      "113,70\n",
-      "112,90\n",
-      "112,78\n",
-      "112,22\n",
-      "111,24\n",
-      "111,04\n",
-      "110,25\n",
-      "107,65\n",
-      "106,53\n",
-      "105,54\n",
-      "121,11\n",
-      "119,87\n",
-      "119,21\n",
-      "117,75\n",
-      "117,22\n",
-      "116,03\n",
-      "115,27\n",
-      "114,50\n",
-      "113,08\n",
-      "112,22\n",
-      "112,20\n",
-      "110,48\n",
-      "110,25\n",
-      "109,95\n",
-      "108,16\n",
-      "106,61\n",
-      "104,75\n",
-      "104,46\n",
-      "119,02\n",
-      "118,90\n",
-      "118,60\n",
-      "116,18\n",
-      "115,90\n",
-      "114,70\n",
-      "114,70\n",
-      "113,63\n",
-      "112,76\n",
-      "112,40\n",
-      "112,39\n",
-      "111,98\n",
-      "111,62\n",
-      "111,58\n",
-      "111,43\n",
-      "111,41\n",
-      "109,07\n",
-      "105,58\n",
-      "121,85\n",
-      "119,67\n",
-      "118,56\n",
-      "118,25\n",
-      "115,65\n",
-      "114,17\n",
-      "113,43\n",
-      "113,30\n",
-      "112,87\n",
-      "112,82\n",
-      "111,87\n",
-      "111,75\n",
-      "111,13\n",
-      "109,26\n",
-      "109,14\n",
-      "105,95\n",
-      "104,91\n",
-      "104,40\n",
-      "118,29\n",
-      "116,96\n",
-      "116,77\n",
-      "116,28\n",
-      "115,43\n",
-      "114,99\n",
-      "113,77\n",
-      "113,49\n",
-      "113,11\n",
-      "112,95\n",
-      "112,82\n",
-      "112,68\n",
-      "111,66\n",
-      "110,15\n",
-      "110,06\n",
-      "109,48\n",
-      "109,43\n",
-      "107,78\n",
-      "122,29\n",
-      "120,51\n",
-      "119,82\n",
-      "119,42\n",
-      "118,68\n",
-      "118,24\n",
-      "117,69\n",
-      "117,17\n",
-      "117,11\n",
-      "117,10\n",
-      "116,14\n",
-      "115,40\n",
-      "114,86\n",
-      "114,52\n",
-      "114,27\n",
-      "114,03\n",
-      "113,53\n",
-      "110,05\n",
-      "121,02\n",
-      "120,65\n",
-      "119,19\n",
-      "119,05\n",
-      "116,81\n",
-      "116,01\n",
-      "114,84\n",
-      "113,86\n",
-      "113,14\n",
-      "112,92\n",
-      "112,58\n",
-      "112,28\n",
-      "111,95\n",
-      "110,74\n",
-      "110,72\n",
-      "110,33\n",
-      "110,19\n",
-      "107,10\n",
-      "118,66\n",
-      "117,33\n",
-      "117,24\n",
-      "117,14\n",
-      "114,76\n",
-      "114,15\n",
-      "113,67\n",
-      "113,23\n",
-      "112,94\n",
-      "112,62\n",
-      "112,19\n",
-      "112,16\n",
-      "111,75\n",
-      "111,70\n",
-      "110,99\n",
-      "108,46\n",
-      "107,47\n",
-      "107,11\n",
-      "124,77\n",
-      "122,97\n",
-      "117,24\n",
-      "117,18\n",
-      "115,52\n",
-      "115,08\n",
-      "114,16\n",
-      "113,88\n",
-      "113,08\n",
-      "112,75\n",
-      "112,45\n",
-      "111,97\n",
-      "110,39\n",
-      "110,34\n",
-      "109,63\n",
-      "108,45\n",
-      "107,97\n",
-      "107,68\n",
-      "118,53\n",
-      "118,44\n",
-      "117,37\n",
-      "116,25\n",
-      "115,67\n",
-      "114,57\n",
-      "113,86\n",
-      "113,56\n",
-      "113,05\n",
-      "112,43\n",
-      "109,43\n",
-      "109,08\n",
-      "108,87\n",
-      "108,41\n",
-      "106,46\n",
-      "104,83\n",
-      "104,36\n",
-      "99,01\n",
-      "122,53\n",
-      "119,66\n",
-      "118,44\n",
-      "117,94\n",
-      "117,91\n",
-      "117,35\n",
-      "116,93\n",
-      "115,63\n",
-      "112,39\n",
-      "111,74\n",
-      "111,37\n",
-      "111,01\n",
-      "110,87\n",
-      "110,34\n",
-      "109,61\n",
-      "106,37\n",
-      "106,24\n",
-      "104,08\n",
-      "118,54\n",
-      "118,36\n",
-      "118,35\n",
-      "117,44\n",
-      "115,97\n",
-      "115,60\n",
-      "115,53\n",
-      "115,37\n",
-      "114,83\n",
-      "114,59\n",
-      "114,12\n",
-      "114,08\n",
-      "113,89\n",
-      "113,56\n",
-      "110,62\n",
-      "108,37\n",
-      "107,60\n",
-      "104,97\n",
-      "126,15\n",
-      "122,68\n",
-      "121,83\n",
-      "120,28\n",
-      "120,21\n",
-      "116,98\n",
-      "116,32\n",
-      "115,70\n",
-      "114,15\n",
-      "114,13\n",
-      "114,02\n",
-      "113,98\n",
-      "113,66\n",
-      "113,14\n",
-      "112,92\n",
-      "112,60\n",
-      "110,82\n",
-      "108,87\n",
-      "120,89\n",
-      "119,81\n",
-      "118,72\n",
-      "117,26\n",
-      "116,92\n",
-      "116,44\n",
-      "116,22\n",
-      "116,06\n",
-      "115,97\n",
-      "115,65\n",
-      "115,43\n",
-      "115,04\n",
-      "112,90\n",
-      "112,64\n",
-      "112,12\n",
-      "109,26\n",
-      "109,26\n",
-      "106,97\n",
-      "125,92\n",
-      "125,83\n",
-      "122,38\n",
-      "122,31\n",
-      "121,43\n",
-      "120,28\n",
-      "119,88\n",
-      "118,18\n",
-      "116,77\n",
-      "116,54\n",
-      "116,48\n",
-      "116,30\n",
-      "115,20\n",
-      "113,92\n",
-      "113,89\n",
-      "113,62\n",
-      "112,17\n",
-      "110,40\n",
-      "129,82\n",
-      "126,36\n",
-      "120,22\n",
-      "118,48\n",
-      "118,42\n",
-      "118,20\n",
-      "118,01\n",
-      "117,93\n",
-      "117,92\n",
-      "117,06\n",
-      "115,72\n",
-      "115,64\n",
-      "114,84\n",
-      "114,22\n",
-      "113,69\n",
-      "113,50\n",
-      "112,58\n",
-      "111,49\n",
-      "124,22\n",
-      "123,09\n",
-      "121,83\n",
-      "121,50\n",
-      "120,29\n",
-      "119,33\n",
-      "118,94\n",
-      "118,59\n",
-      "118,47\n",
-      "118,32\n",
-      "118,22\n",
-      "117,90\n",
-      "117,67\n",
-      "117,54\n",
-      "117,03\n",
-      "114,02\n",
-      "112,83\n",
-      "112,73\n",
-      "126,54\n",
-      "123,76\n",
-      "123,67\n",
-      "121,46\n",
-      "121,34\n",
-      "121,01\n",
-      "120,95\n",
-      "120,59\n",
-      "119,60\n",
-      "118,78\n",
-      "117,31\n",
-      "116,95\n",
-      "114,66\n",
-      "114,43\n",
-      "113,66\n",
-      "112,81\n",
-      "107,07\n",
-      "98,03\n",
-      "126,53\n",
-      "125,33\n",
-      "122,04\n",
-      "121,23\n",
-      "118,85\n",
-      "118,39\n",
-      "117,82\n",
-      "117,33\n",
-      "117,18\n",
-      "117,03\n",
-      "116,74\n",
-      "115,29\n",
-      "114,69\n",
-      "114,34\n",
-      "114,07\n",
-      "114,05\n",
-      "113,78\n",
-      "113,39\n",
-      "127,18\n",
-      "123,55\n",
-      "123,30\n",
-      "122,14\n",
-      "120,11\n",
-      "119,89\n",
-      "119,50\n",
-      "118,60\n",
-      "118,01\n",
-      "117,28\n",
-      "117,28\n",
-      "116,16\n",
-      "115,79\n",
-      "115,17\n",
-      "115,01\n",
-      "111,78\n",
-      "111,77\n",
-      "109,82\n",
-      "122,20\n",
-      "121,59\n",
-      "121,16\n",
-      "120,38\n",
-      "119,57\n",
-      "119,19\n",
-      "119,05\n",
-      "118,66\n",
-      "117,27\n",
-      "116,24\n",
-      "116,02\n",
-      "115,48\n",
-      "115,33\n",
-      "113,78\n",
-      "112,70\n",
-      "112,52\n",
-      "109,96\n",
-      "109,86\n",
-      "124,58\n",
-      "124,45\n",
-      "121,59\n",
-      "121,24\n",
-      "120,56\n",
-      "120,47\n",
-      "119,56\n",
-      "118,89\n",
-      "118,77\n",
-      "117,52\n",
-      "116,44\n",
-      "116,24\n",
-      "116,06\n",
-      "113,72\n",
-      "112,93\n",
-      "112,03\n",
-      "111,47\n",
-      "109,89\n",
-      "120,57\n",
-      "119,39\n",
-      "119,18\n",
-      "118,36\n",
-      "118,06\n",
-      "117,91\n",
-      "117,49\n",
-      "117,47\n",
-      "117,12\n",
-      "117,01\n",
-      "114,57\n",
-      "114,32\n",
-      "113,35\n",
-      "113,21\n",
-      "112,88\n",
-      "112,80\n",
-      "111,62\n",
-      "111,04\n",
-      "120,81\n",
-      "120,56\n",
-      "119,62\n",
-      "118,79\n",
-      "117,79\n",
-      "117,31\n",
-      "117,12\n",
-      "116,28\n",
-      "115,74\n",
-      "115,41\n",
-      "115,25\n",
-      "111,38\n",
-      "111,10\n",
-      "110,84\n",
-      "110,76\n",
-      "110,52\n",
-      "105,21\n",
-      "103,80\n",
-      "123,42\n",
-      "122,70\n",
-      "121,72\n",
-      "120,29\n",
-      "118,22\n",
-      "118,21\n",
-      "118,09\n",
-      "117,86\n",
-      "117,31\n",
-      "115,62\n",
-      "115,56\n",
-      "114,89\n",
-      "114,70\n",
-      "114,33\n",
-      "114,30\n",
-      "112,99\n",
-      "112,72\n",
-      "111,80\n",
-      "122,10\n",
-      "120,62\n",
-      "120,48\n",
-      "120,13\n",
-      "119,93\n",
-      "119,32\n",
-      "118,65\n",
-      "118,53\n",
-      "118,15\n",
-      "117,45\n",
-      "116,92\n",
-      "116,47\n",
-      "116,24\n",
-      "115,74\n",
-      "115,25\n",
-      "113,53\n",
-      "112,80\n",
-      "112,76\n",
-      "124,31\n",
-      "122,51\n",
-      "120,97\n",
-      "119,19\n",
-      "118,83\n",
-      "118,83\n",
-      "118,06\n",
-      "117,35\n",
-      "117,28\n",
-      "116,92\n",
-      "116,58\n",
-      "115,15\n",
-      "114,54\n",
-      "113,31\n",
-      "111,78\n",
-      "111,18\n",
-      "109,94\n",
-      "109,26\n",
-      "123,75\n",
-      "123,15\n",
-      "122,13\n",
-      "117,57\n",
-      "117,55\n",
-      "116,59\n",
-      "116,48\n",
-      "115,33\n",
-      "114,53\n",
-      "113,61\n",
-      "113,61\n",
-      "113,11\n",
-      "112,37\n",
-      "111,29\n",
-      "111,28\n",
-      "110,95\n",
-      "108,54\n",
-      "108,49\n",
-      "121,02\n",
-      "120,65\n",
-      "119,92\n",
-      "119,02\n",
-      "118,63\n",
-      "117,76\n",
-      "117,16\n",
-      "116,95\n",
-      "116,84\n",
-      "116,52\n",
-      "115,39\n",
-      "115,16\n",
-      "115,16\n",
-      "114,96\n",
-      "114,04\n",
-      "113,61\n",
-      "111,26\n",
-      "110,85\n",
-      "127,00\n",
-      "122,14\n",
-      "120,40\n",
-      "120,24\n",
-      "117,65\n",
-      "117,50\n",
-      "116,35\n",
-      "115,73\n",
-      "113,93\n",
-      "113,65\n",
-      "113,44\n",
-      "112,51\n",
-      "112,33\n",
-      "109,43\n",
-      "108,85\n",
-      "108,50\n",
-      "107,99\n",
-      "107,30\n",
-      "116,62\n",
-      "115,99\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for matchday in range(1, 35):\n",
     "    url = f'https://www.sport.de/fussball/deutschland-bundesliga/se45495/2022-2023/ro132754/spieltag/md{matchday}/teamstatistik-laufleistung/'\n",
@@ -996,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +497,7 @@
     "        corner_left_elements = soup.find_all('td', class_='team_stats-corner_kicks_left team_stats-corner_kicks_left-list')\n",
     "        corner_right_elements = soup.find_all('td', class_='team_stats-corner_kicks_right team_stats-corner_kicks_right-list')\n",
     "\n",
-    "        for team_element, corner_left_element, corner_right_element, corner_total_element in zip(team_elements, corner_left_elements, corner_right_elements):\n",
+    "        for team_element, corner_left_element, corner_right_element in zip(team_elements, corner_left_elements, corner_right_elements):\n",
     "            team_name = team_element.text.strip()\n",
     "            corner_left = corner_left_element.text.strip()\n",
     "            corner_right = corner_right_element.text.strip()\n",
